# gfx

./: .gitignore  .gitmodules  LICENSE  README.md
common/: Object.h  objloader.cpp  objloader.hpp  plyloader.cpp  plyloader.hpp  shader.cpp  shader.hpp  tga.c  tga.h  util.h
data/shader/: Debug.geom  Debug.vert  Simple.frag
engine_template/: .gitignore  CMakeLists.txt  CameraController.cpp  CameraController.hpp  CameraObject.cpp  CameraObject.hpp  DebugEditor.cpp  DebugEditor.hpp  LoadObj.cpp  LoadObj.hpp  Log.cpp  Log.h  Log.hpp  Mesh.cpp  Mesh.hpp  MeshMaker.cpp  MeshMaker.hpp  MultiLight.cpp  MultiLight.hpp  PointLight.cpp  PointLight.hpp  PointObject.cpp  PointObject.hpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  SceneObject.cpp  SceneObject.hpp  SceneRenderer.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  StringUtil.cpp  StringUtil.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  (+8 more)
engine_template/data/shader/: Debug.frag  Phong.frag  Phong.vert  Point.vert  Simple.vert  StandardShading.vertexshader
grid_axes/: CMakeLists.txt  engine_demo.cpp  run.sh
grid_axes/data/shader/: Hair.fragmentshader  Hair.vertexshader  PhongShading.fragmentshader  Picking.vertexshader  StandardShading.vertexshader
music_test/: .gitignore  CMakeLists.txt  music_test.cpp
music_test/data/shader/: Hair.geometryshader  PhongShading.fragmentshader  PhongShading.vertexshader  Picking.fragmentshader  Plasma.fragmentshader  QuadRender.fragmentshader  QuadRender.vertexshader
spinning_cube/: .gitignore  CMakeLists.txt  Cube.cpp  Cube.hpp  spinning_cube.cpp
spinning_cube/data/shader/: Phong.frag  Phong.vert  Point.vert  util.glsl
vulcan_triangle/: CMakeLists.txt  main.cpp
